--- a/Vortex.FileOptimizer-Docker/Vortex.FileOptimizer-Docker.csproj
+++ b/Vortex.FileOptimizer-Docker/Vortex.FileOptimizer-Docker.csproj
@@ -23,4 +23,8 @@
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="app\publish\" />
+  </ItemGroup>
 </Project>
